# HiveTorch

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  git_choreography.ps1  main.py  pyproject.toml
.config/federation/: global_runtime.yaml
.config/federation/model/: deep_cnn.yaml
.config/federation/topology/: iid_balanced.yaml  non_iid_dirichlet.yaml
.github/workflows/: containerization.yaml  integration.yaml
deployments/: k8s-simulation-job.yaml  prometheus-rules.yaml
docker/: Dockerfile  docker-compose.yml
proto/: federated.proto
scripts/: analyze_heterogeneity.py  orchestrate_simulation.py  run_benchmarks.py  run_pipeline.py  tune_hyperparameters.py
scripts/metrics/: benchmark.json
src/fedavg_core/client/: edge_trainer.py
src/fedavg_core/data/: dataset_downloader.py  non_iid_sharder.py  processing_pipeline.py
src/fedavg_core/evaluation/: global_evaluator.py
src/fedavg_core/models/: architectures.py
src/fedavg_core/monitoring/: drift_detector.py
src/fedavg_core/optimization/: hyperparameter_tuner.py  weight_alignment.py
src/fedavg_core/server/: coordinator.py  secure_aggregator.py
src/fedavg_core/utils/: configuration_factory.py  tracking.py
src/fedavg_core/versioning/: model_registry.py
tests/integration/: test_federation_loop.py
tests/unit/: test_aggregation.py  test_sharding.py
