[project]
name = "hivetorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc>=3.67.1",
    "grpcio>=1.81.1",
    "grpcio-tools>=1.81.1",
    "hydra-core>=1.3.3",
    "loguru>=0.7.3",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "opacus>=1.6.0",
    "optuna>=4.9.0",
    "prometheus-client>=0.25.0",
    "safetensors>=0.8.0",
    "scikit-learn>=1.9.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "wandb>=0.27.2",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]
